in progress backend and database link for account management

--- a/orbital/src/self/frontend/componentscss/formcss/registerform.css
+++ b/orbital/src/self/frontend/componentscss/formcss/registerform.css
@@ -31,7 +31,8 @@
 }
 
 .register-form input[type="text"],
-.register-form input[type="password"] {
+.register-form input[type="password"],
+.register-form input[type="email"] {
     font-family: "Tienne", sans-serif;
     width: 100%;
     padding: 1%;
